--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
 
   <fragment
     android:id="@+id/dataFragment"
+    android:name="com.example.seccion9_fragments.Fragments.DataFragment"
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_weight="50"
@@ -16,6 +17,7 @@
 
   <fragment
     android:id="@+id/detailsFragment"
+    android:name="com.example.seccion9_fragments.Fragments.DatilsFragment"
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_weight="50"
