--- a/app/src/main/res/layout/fragment_data.xml
+++ b/app/src/main/res/layout/fragment_data.xml
@@ -5,10 +5,30 @@
   android:layout_height="match_parent"
   tools:context=".Fragments.DataFragment">
 
-  <!-- TODO: Update blank fragment layout -->
-  <TextView
+  <RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:text="@string/hello_blank_fragment" />
+    android:layout_height="match_parent">
+
+    <EditText
+      android:id="@+id/editTextData"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_alignParentTop="true"
+      android:layout_alignParentLeft="true"
+      android:layout_alignParentStart="true"
+      android:inputType="textPersonName"
+      android:layout_marginTop="45dp"
+      />
+
+    <Button
+      android:id="@+id/buttonSend"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_below="@+id/editTextData"
+      android:layout_centerHorizontal="true"
+      android:layout_marginTop="125dp"
+      android:text="Send" />
+
+  </RelativeLayout>
 
 </FrameLayout>
