--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -8,11 +8,11 @@
   tools:context=".Activities.MainActivity">
 
   <fragment
-    android:id="@+id/dataFragment"
-    android:name="com.example.seccion9_fragments.Fragments.DataFragment"
+    android:id="@+id/detailsFragment"
+    android:name="com.example.seccion9_fragments.Fragments.DetailsFragment"
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_weight="1"
-    tools:layout="@layout/fragment_data" />
+    tools:layout="@layout/fragment_details" />
 
 </LinearLayout>
